<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.details.DetailsActivity">

    <LinearLayout
        android:id="@+id/poster_details"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/poster"
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/title_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:text="@string/title_header"/>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/genre_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/genre_header"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/genreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/duration_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/duration_header"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/durationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/language_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/language_header"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/languageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/release_date_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/date_header"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/releaseDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>


            <TextView
                android:id="@+id/rating_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/rating_header"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/overview_header"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/poster_details"
        android:text="@string/overview"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/overviewTextView"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/overview_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:id="@+id/credits_trailer"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/overviewTextView"
        android:layout_marginTop="-5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/credits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cast_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/cast_header"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/castTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/crew_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/crew_header"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/crewTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>


        </LinearLayout>
        
        <RelativeLayout
            android:id="@+id/trailer_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <WebView
                android:id="@+id/webView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>
            
        </RelativeLayout>
        
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="43dp">


        <Button
            android:id="@+id/watched_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:onClick="addWatchedBtnClick"
            android:layout_marginStart="40dp"
            android:text="@string/watched_btn" />

        <Button
            android:id="@+id/will_watch_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="willWatchBtnClick"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:text="@string/will_watch_btn" />

        <EditText
            android:id="@+id/rating_edit"
            android:layout_width="107dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:hint="@string/rating_hint"
            android:inputType="text"
            android:padding="1dp" />

        <Button
            android:id="@+id/enter_rating_btn"
            android:layout_width="wrap_content"
            android:onClick="rateMovieBtnClick"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/enter_rating"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/error"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/lb_ic_sad_cloud"
        android:text="@string/error_message"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>